--- a/.hfjobs/Dockerfile
+++ b/.hfjobs/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12
 
-ENV ENDPOINT_URL="http://localhost:8000"
+ENV ENDPOINT_URL="http://host.docker.internal:8000"
 ENV ENDPOINT_API_KEY="undefined"
 ENV ENDPOINT_NUM_SAMPLES=50
 ENV ENDPOINT_TEST_SEED=31415926
