test(hfjobs): reexport build arg to env

--- a/.hfjobs/Dockerfile
+++ b/.hfjobs/Dockerfile
@@ -5,6 +5,11 @@ ARG ENDPOINT_URL="http://host.docker.internal:8000"
 ARG ENDPOINT_NUM_SAMPLES=50
 ARG ENDPOINT_TEST_SEED=31415926
 
+ENV ENDPOINT_API_KEY=$ENDPOINT_API_KEY
+ENV ENDPOINT_URL=$ENDPOINT_URL
+ENV ENDPOINT_NUM_SAMPLES=$ENDPOINT_NUM_SAMPLES
+ENV ENDPOINT_TEST_SEED=$ENDPOINT_TEST_SEED
+
 RUN --mount=type=bind,source=.hfjobs/requirements.txt,target=/opt/endpoint/tests/requirements.txt \
     python -m pip install -r /opt/endpoint/tests/requirements.txt
 
