test(hfjobs): set full url for endpoint

--- a/.hfjobs/Dockerfile
+++ b/.hfjobs/Dockerfile
@@ -8,7 +8,7 @@ ARG ENDPOINT_TEST_SEED=31415926
 ENV NUMBA_CACHE_DIR=/tmp/numba
 ENV HF_HOME=/tmp/huggingface
 
-ENV ENDPOINT_URL=$ENDPOINT_URL
+ENV ENDPOINT_URL=${ENDPOINT_URL}/api/v1
 ENV ENDPOINT_NUM_SAMPLES=$ENDPOINT_NUM_SAMPLES
 ENV ENDPOINT_TEST_SEED=$ENDPOINT_TEST_SEED
 
