--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-librosa>=0.11.0
-loguru>=0.7.0
-vllm>=0.8.4
-transformers>=4.50.0
+transformers>=4.41,<5.0
+vllm==0.8.4
+librosa>=0.11,<0.12
+loguru>=0.7,<0.8
